Bugfixing wrapping in Korean player names

--- a/perchweb/scss/_replay.scss
+++ b/perchweb/scss/_replay.scss
@@ -131,6 +131,7 @@
 }
 
 .playername {
+    white-space: nowrap;
     display:inline-block;
     font-weight:bold;
 }
