--- a/perchweb/static/style/perch.css
+++ b/perchweb/static/style/perch.css
@@ -1027,6 +1027,7 @@ footer {
       margin-bottom: -1px; }
 
 .playername {
+  white-space: nowrap;
   display: inline-block;
   font-weight: bold; }
 
